# CutScript

./: .gitignore  AGENTS.md  README.md  ToDo.md  package.json
Docs/: api-reference.md  architecture.md  attribution.md  features.md  getting-started.md  keyboard-shortcuts.md
backend/: main.py  pyproject.toml
backend/routers/: export.py  transcribe.py
backend/services/: transcription.py
backend/utils/: gpu_utils.py
electron/: main.js  preload.js
frontend/: vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AIPanel.tsx  BackendStatusDot.tsx  ExportDialog.tsx  PasteTranscriptDialog.tsx  SettingsPanel.tsx  TranscriptEditor.tsx
frontend/src/hooks/: useAutoReset.ts
frontend/src/store/: aiStore.ts  editorStore.ts
frontend/src/types/: project.ts
frontend/src/utils/: buildDeletedSet.ts  diffTranscript.ts  env.ts  exportToFile.ts
