[project]
name = "cutscript-backend"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    # FastAPI backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.12",

    # Transcription (WhisperX for word-level alignment)
    "whisperx>=3.1.0",
    "faster-whisper>=1.0.0",

    # Audio / Video processing
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "soundfile>=0.10.3",

    # ML / GPU
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # deepfilternet pins numpy<2.0 but only checks metadata; whisperx needs >=2.1 at runtime
    "numpy>=2.1.0",

    # Speaker diarization
    "pyannote.audio>=3.1.1",

    # AI providers
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "requests>=2.28.0",

    # Audio cleanup
    "deepfilternet>=0.5.0",

    # Utilities
    "pydantic>=2.0.0",
]

[tool.uv]
# deepfilternet declares numpy<2.0 but works fine at runtime with numpy 2.x.
# whisperx requires numpy>=2.1, so override deepfilternet's stale constraint.
override-dependencies = ["numpy>=2.1.0"]
